assets/css/index.css
/* ... */
/* Lightbox */
#lightbox {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100%;
  min-height: 100vh;
  min-height: -webkit-fill-available;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 16px;
  padding-right: 16px;
  box-sizing: border-box;
  visibility: hidden;
  background-color: var(--siteColor);
  z-index: 10;

  clip-path: inset(0% 0% 0% 100%);
  will-change: clip-path;
}

#lightbox.open {
  visibility: visible;
  clip-path: inset(0%);
}

.carouselContainer {
  /* workaround for iOS 14, aspect-ratio in the parent container is not supported */
  /* https://stackoverflow.com/a/29194256 */
  padding-bottom: calc(100% / 1.5);
}

div[data-barba-namespace="homepage"] .carouselContainer {
  cursor: url("../../cursor.png") 8 20, auto;
}

#lightbox .carouselArea {
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  padding: calc(var(--verticalMargin) * 4) var(--horizontalMargin);
  margin: 0;
}

@media only screen and (max-width: 1000px) {
  #lightbox .carouselArea {
    padding: calc(var(--verticalMargin) * 6) var(--horizontalMargin);
  }
}

#lightbox .carouselContainer {
  /* unset aspect-ratio workaround */
  padding-bottom: 0;

  position: relative;
  width: 100%;
  height: 100%;
  margin: 0;
  left: 0;
  top: 0;
}

#lightbox .slide img {
  /* center the image */
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

  /* proportionally constrains the height and width by the parent elements dimensions */
  display: block;
  width: auto;
  height: auto;
  max-height: 100%;
  max-width: 100%;
}

.leftButton {
  opacity: 0;
  /* margin-top: 16px; */
  position: absolute;
  width: 50%;
  left: 0;
  top: 0;
  height: 100%;
  z-index: 3;
}

div[data-barba-namespace="homepage"] .leftButton {
  cursor: url("../../cursor.png") 8 20, auto;
}

div[data-barba-namespace="homepage"] .leftButton:hover {
  cursor: url("../../cursor-left.png") 24 20, auto;
}

.rightButton {
  /* margin-top: 16px; */
  opacity: 0;
  position: absolute;
  width: 50%;
  top: 0;
  left: 50%;
  height: 100%;
  z-index: 3;
}

div[data-barba-namespace="homepage"] .rightButton {
  cursor: url("../../cursor.png") 8 20, auto;
}

#exit,
#close {
  float: right;
  color: black;
  padding-bottom: 1px;
  text-decoration: none;
  box-sizing: content-box;
  border-bottom: none;
  cursor: pointer;
  margin: 0;
  border-bottom: 2px solid transparent;
}

.mobileprojectDescription {
  display: none;
  position: absolute;
  transform: translate(-50%, -50%);
  left: 50%;
  width: 100%;
  top: 50%;
  padding: 40px;
  box-sizing: border-box;
}

#mobile-contact {
  display: none;
  text-align: center;
  width: 100%;
}

/* Screensaver */
#screensaver {
  pointer-events: none;
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100%;
  clip-path: inset(0% 0% 0% 100%);
  will-change: clip-path;
  transition: clip-path linear;
  z-index: 1000;
  cursor: pointer;
}

#screensaver.visible {
  pointer-events: all;
  clip-path: inset(0%);
  transition-duration: 2000ms;
}

#screensaver.instant {
  pointer-events: all;
  clip-path: inset(0%);
}

#screensaver.exiting {
  clip-path: inset(0% 100% 0% 0%);
  transition-duration: 2000ms;
}

#screensaver img {
  object-fit: cover;
  height: 100%;
  width: 100%;
}

#screensaver .ss-caption {
  position: absolute;
  top: 0;
  left: 0;
  width: calc(100% - 32px);
  padding: 14px 16px;
}

.ss-container {
  height: 100%;
  width: 100%;
}

.ss-container.hidden {
  display: none;
}

#btt-button {
  position: fixed;
  bottom: 14px;
  right: 16px;
  padding: 7.5px 7px 7.5px 10px;
  border-radius: 5px;
  box-shadow: 0px 0px 10px 0 rgba(0, 0, 0, 0.25);
  background-color: var(--siteColor);
}

#btt-button,
#project-buttons {
  transition: opacity 0.5s ease-in-out;
  opacity: 0;
  pointer-events: none;
}

#btt-button.visible,
#project-buttons.visible {
  opacity: 1;
  pointer-events: all;
}

/* Hoverable */
@media (any-hover: hover) {
  /* Prevent hoverstates on mobile */
  .projectView:hover,
  #infoButton:hover,
  #exit:hover,
  #close:hover {
    border-bottom: 2px solid currentColor;
  }
}

/* Mobile */
@media only screen and (max-width: 800px) {
  body {
    --projNumWidth: 35px;
  }

  .mobile-andmore {
    display: inline;
  }

  .desktop {
    display: none;
  }

  #mobile-contact {
    display: block;
  }

  .centered-list {
    width: calc(100% - var(--stWidth));
    text-align: left;
  }

  #introduction {
    text-align: left;
    padding: 48px 0px;
  }

  .centered-list {
    --stWidth: 36px;
  }

  #introduction,
  #conclusion {
    width: calc(100% - var(--projNumWidth));
  }

  #introduction ul li::before,
  #conclusion ul li::before {
    /* move it a smidge to the left */
    transform: translateX(calc(calc(var(--projNumWidth) + 1px) * -1));
  }

  .projectLabel {
    margin-right: 9px;
  }

  #info {
    width: 100%;
    text-align: left;
    padding: 48px 0px;
  }

  #contact {
    width: 100%;
  }

  .projectDescriptionContainer {
    overflow: hidden;
    text-overflow: ellipsis;
  }
  .projectDescription {
    box-sizing: border-box;
    width: 100%;
    padding: 40px;
  }

  .projectDescription {
    display: none;
  }

  .mobileprojectDescription {
    display: inline-block;
    text-align: center;
  }
  .gridContainer {
    grid-template-columns: 1fr 1fr;
  }

  .full-w-margins,
  .projectText {
    text-align: left;
    margin-left: 0;
    margin-right: 0;
  }

  .carouselArea,
  .projectText,
  .gridContainer,
  .full-w-margins {
    max-width: 100%;
  }

  .carouselArea.shortened {
    max-width: calc(100% * 0.75);
  }
}

.pointer-events-none {
  pointer-events: none;
}

#bottom-nav {
  position: fixed;
  bottom: 0;
  left: 0;
  padding: 0 16px 14px;
  display: flex;
  gap: 10px;
  width: 100%;
  justify-content: space-between;
  box-sizing: border-box;
  pointer-events: none;
}

#project-buttons,
#project-buttons ul {
  display: flex;
}

#project-buttons li {
  padding-right: 10px;
}

#project-buttons #prev {
  margin-right: 10px;
}
/* ... */

